--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,6 +39,6 @@
     //element should grow to fit the rest of the space
 
     //REMOVE THIS IS FOR TESTING
-    background-color: orangered;
+    //background-color: orangered;
     height:80rem;
 }
