--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -198,3 +198,54 @@
     text-align: center;
     padding: 2.5rem;
 }
+
+
+/////////////////////////////////////////////
+// GALLERY
+.gallery {
+    display:flex;
+
+    &__photo {
+        width:100%;
+        display:block;
+    }
+}
+
+
+/////////////////////////////////////////////
+// Overview
+.overview {
+    display:flex;
+    justify-content: space-between;
+
+    &__heading {
+        
+    }
+
+    &__stars {
+        margin-right: auto; //fill entire space to the right
+    }
+
+    &__icon-star,
+    &__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary)
+    }
+
+    &__location {
+    }
+
+    &__rating {
+
+    }
+
+    &__rating-average {
+
+    }
+
+    &__rating-count {
+
+    }
+
+}
