--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
     font-size:1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-dark-1);
+    border-bottom: 1px solid var(--color-grey-light-2);
     //flex container
     display:flex;
     justify-content: space-between; //evenly spread out
