--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -34,7 +34,18 @@ Grey dark 3: #999
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
+
+    --line: 1px solid var(--color-grey-light-2);
+
+    --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+    --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
 }
+
+$bp-largest: 75em; //1200px/16 - 75
+$bp-large: 68.75em; //1100px/16 - 68.75
+$bp-medium: 56.25em; //900px/16 - 56.25
+$bp-small: 37.5em; //600px/16 - 37.5
+$bp-smallest: 31.25em; //500px/16 - 31.25
 
 * {
     margin:0;
@@ -50,6 +61,10 @@ Grey dark 3: #999
 html {
     box-sizing: border-box;
     font-size: 62.5%; //1rem = 10px
+    
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%; //1rem = 8px
+    }
 }
 body {
     font-family: "Open Sans", sans-serif;
