--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,13 @@
     align-items: center;
     justify-content: center; 
 
+    @media only screen and (max-width: $bp-smallest) {
+        order:1; //set to last position
+        flex: 0 0 100%; //fill 100% size, so it will wrap to new line
+        
+        background-color: var(--color-grey-light-2); //make search bar look full width
+    }
+
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -135,11 +142,26 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium) {
+        display:flex;
+        margin:0;
+    }
+
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom:.5rem;
+            @media only screen and (max-width: $bp-medium) {
+                margin-bottom:0;
+            }
+        }
+
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
+        }
+        @media only screen and (max-width: $bp-smallest) {
+            text-align: center;
         }
     }
 
@@ -179,6 +201,15 @@
         display:flex;
         align-items: center;//center children vertically 
         z-index: 1;
+
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding:2rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+        }
     }
 
 
@@ -187,6 +218,14 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;//set to color of parent
+
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+
+        }
     }
 }
 
@@ -197,6 +236,10 @@
     color:var(--color-grey-light-4);
     text-align: center;
     padding: 2.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        display:none;
+    }
 }
 
 
@@ -218,13 +261,20 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
+
     &__heading {
         font-size: 2.25rem;
         font-weight: 300;
         text-transform: uppercase;
         letter-spacing: 1px;
         padding:1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
+        
     }
 
     &__stars {
@@ -260,17 +310,30 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @media only screen and (max-width: $bp-small) {
+            padding: 0rem 1.5em;
+        }
+        
     }
 
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -3px;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+        }
     }
 
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: .5rem;
+        }
     }
 
 }
@@ -289,8 +352,17 @@
     cursor: pointer;
     transition:all .2s;
 
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
+
     &:hover {
         color: var(--color-grey-dark-1);
+
+        span {
+            margin-left: 8px;
+        }
     }
 
     &:focus {
@@ -313,5 +385,230 @@
     100%{
         transform:scale(1);
         box-shadow: none;
+    }
+}
+
+/////////////////////////////////////////////
+// PARAGRAPH
+.paragraph {
+    &:not(:last-of-type){
+        //similar to not(:last-child) but only the p tags
+        margin-bottom:2rem;
+    }
+}
+
+/////////////////////////////////////////////
+// LIST
+.list {
+    list-style:none;
+    margin:3rem 0;
+    padding:3rem 0;
+    border-top:var(--line);
+    border-bottom:var(--line);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+        flex: 0 0 50%;
+    }
+
+    &__item::before {
+        //custom list style img
+        content: "";
+        display:inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+
+        
+
+        //fix for older browser
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
+
+        //newer brosers - masks
+        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+            background-image: none;
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+        }
+        
+
+    }
+}
+
+/////////////////////////////////////////////
+// RECOMMEND
+.recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display:flex;
+    align-items: center;
+    
+    &__count {
+        margin-right:auto;
+    }
+
+    &__friends {
+        display:flex; //fix for smaller width viewport for images
+    }
+
+    &__photo {
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid #fff;
+        box-sizing: content-box; //fix the border, so it doesnt remove from the inner space
+
+        &:not(:last-child) {
+            margin-right: -2rem;
+        }
+    }
+
+}
+
+/////////////////////////////////////////////
+// REVIEWS
+.review {
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding:2rem;
+        margin-bottom: 3rem;
+    }
+
+    &__text {
+        margin-bottom: 2rem;
+        z-index:10;
+        position: relative;
+    }
+
+    &__user {
+        display:flex;
+        align-items: center;
+        margin-top: 1.5rem;
+    }
+
+    &__photo {
+        height:4.5rem;
+        width:4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+
+    &__user-box {
+        margin-right:auto;
+    }
+
+    &__user-name {
+        font-size:1.1rem;
+        font-weight: 600;
+        margin-bottom: .4rem;
+        text-transform: uppercase;
+    }
+
+    &__user-date {
+        font-size: 1.2rem;
+        color: var(--color-grey-dark-3)
+    }
+
+    &__rating {
+        color: var(--color-primary);
+        font-size: 3rem;
+        font-weight: 300;
+    }
+
+    &::before {
+        content: "\201C";
+        position:absolute;
+        top: -2.75rem;
+        left: -1rem;
+        font-size:20rem;
+        color: var(--color-grey-light-2);
+        line-height: 1;
+        font-family: sans-serif;
+    }
+}
+
+/////////////////////////////////////////////
+// CALL TO ACTION
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
+
+    &__book-now {
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem
+    }
+
+
+}
+
+/////////////////////////////////////////////
+// BUTTON
+.btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border:none;
+    color: #fff;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    position: relative;
+    overflow: hidden;
+    
+    transition: all .2s;
+
+    & > * {
+        height:100%;
+        width:100%;
+        display:inline-block;
+        transition: all .2s;
+    }
+
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position:absolute;
+        padding: 2rem 0;
+        left:0;
+        top:-100%;//move out exactly how high the item is
+        
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+        cursor: pointer;
+    }
+
+    &:hover &__visible{
+        transform:translateY(100%);
+    }
+
+    &:hover &__invisible{
+        top:0;
+    }
+
+    &:focus {
+        outline: none;
+        animation:pulsate 1s infinite;
     }
 }
